Start working on listing by category or supplier

--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark products category">Category</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark products">Supplier</a>
+                        </li>
                     </ul>
                 </div>
             </div>
