--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -24,11 +24,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark products category">Category</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-dark products category dropdown-toggle" data-toggle="dropdown">Category</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark products">Supplier</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-dark products supplier dropdown-toggle" data-toggle="dropdown">Supplier</a>
                         </li>
                     </ul>
                 </div>
