Fix dropdown menu on firs click

--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -26,10 +26,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link text-dark products category dropdown-toggle" data-toggle="dropdown">Category</a>
+	                        <a class="nav-link text-dark products category dropdown-toggle" data-toggle="dropdown">Category</a>
+	                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link text-dark products supplier dropdown-toggle" data-toggle="dropdown">Supplier</a>
+	                        <a class="nav-link text-dark products supplier dropdown-toggle" data-toggle="dropdown">Supplier</a>
+	                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="CheckoutForm">Checkout</a>
