--- a/src/Codecool.CodecoolShop/Views/Cart/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Index.cshtml
@@ -53,7 +53,7 @@
 		}
 		<tr>
 			<td></td>
-			<td class="align-middle"><a type="button" class="btn btn-primary continue" style="float: bottom; color: white">Continue Shopping</a></td>
+			<td class="align-middle"><a type="button" asp-area="" asp-controller="Product" asp-action="Index" class="btn btn-primary continue" style="float: bottom; color: white">Continue Shopping</a></td>
 			<td class="align-middle"></td>
 			<td class="align-middle">Total Price:</td>
 			<td class="align-middle"> @ViewBag.total @ViewBag.cart[0].Product.Currency</td>
@@ -64,7 +64,7 @@
 	{
 		<tr>
 			<td></td>
-			<td class="align-middle"><a type="button" class="btn btn-primary continue" style="float: bottom; color: white">Continue Shopping</a></td>
+			<td class="align-middle"><a type="button" asp-area="" asp-controller="Product" asp-action="Index" class="btn btn-primary continue" style="float: bottom; color: white">Continue Shopping</a></td>
 			<td class="align-middle"></td>
 			<td class="align-middle"></td>
 			<td class="align-middle"></td>
