--- a/src/Codecool.CodecoolShop/Views/Cart/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Index.cshtml
@@ -47,7 +47,7 @@
 					</div>
 				</td>
 				<td class="align-middle">@item.Product.DefaultPrice @item.Product.Currency</td>
-				<td class="align-middle"> <span data-price="@item.Product.DefaultPrice" id="sub-@item.Product.Id">@(item.Product.DefaultPrice * item.Quantity)</span> @item.Product.Currency</td>
+				<td class="align-middle"> <span class="sub-total" data-price="@item.Product.DefaultPrice" id="sub-@item.Product.Id">@(item.Product.DefaultPrice * item.Quantity)</span> @item.Product.Currency</td>
 				<td class="align-middle"><a type="button" class="btn btn-primary remove" style="float: bottom; color: Red">Remove</a></td>
 			</tr>
 		}
@@ -56,7 +56,7 @@
 			<td class="align-middle"><a type="button" asp-area="" asp-controller="Product" asp-action="Index" class="btn btn-primary continue" style="float: bottom; color: white">Continue Shopping</a></td>
 			<td class="align-middle"></td>
 			<td class="align-middle">Total Price:</td>
-			<td class="align-middle"> @ViewBag.total @ViewBag.cart[0].Product.Currency</td>
+			<td class="align-middle"> <span id="total-price">@ViewBag.total</span> @ViewBag.cart[0].Product.Currency</td>
 			<td class="align-middle"><a type="button" class="btn btn-primary checkout" style="float: bottom; color: white">Checkout</a></td>
 		</tr>
 	}
