--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="CheckoutForm">Checkout</a>
                         </li>
                         <li class="nav-item ml-auto">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index"><span id="CartCount"></span>Cart</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index"><span id="CartCount"></span><i class='fas fa-shopping-basket' style="font-size:24px"></i></a>
                         </li>
                      </ul>
                 </div>
@@ -60,6 +60,7 @@
 <script src="~/lib/CardJs-master/card-js.min.js"></script>
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
