--- a/src/Codecool.CodecoolShop/Views/Shared/CheckoutForm.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/CheckoutForm.cshtml
@@ -5,12 +5,12 @@
 
 
 
-    <form asp-controller="Product" asp-action="PaymentForm" class="row g-3" method="post" novalidate id="checkout-form">
+<form class="row g-3" novalidate id="checkout-form">
         <div class="col-md-12">
         <h2>@ViewData["Title"]</h2>
         </div>
         <div class="col-md-6">
-            <p>Please fill up the form: </p>
+            <p>Please fill in the form: </p>
         </div>
         
         <div class="col-12">
@@ -22,8 +22,8 @@
             <input id="email_input" class="form-control" type="email" name="email" required>
         </div>
         <div class="col-md-6">
-            <label for="phone_input">Phone number (like 36 70 123 4567)</label>
-            <input id="phone_input" class="form-control" type="tel" name="phone" pattern="[0-9]{2} [0-9]{2} [0-9]{3} [0-9]{4}" required>
+            <label for="phone_input">Phone number (like +36 70 1234567)</label>
+            <input id="phone_input" class="form-control" type="tel" name="phone" pattern="\+[0-9]{2} [0-9]{2} [0-9]{7}" required>
         </div>
         <div class="col-12">
             <h3>Billing Address</h3>
@@ -50,20 +50,22 @@
         </div>
         <div class="col-12">
              <label for="ship_address_input">Address</label>
-             <input id="ship_address_input" class="form-control" type="text" name="address" required>
+             <input id="ship_address_input" class="form-control" type="text" name="ship_address" required>
         </div>
                     
                     <div class="col-md-6">
                         <label for="ship_country_input">Country</label>
-                        <input id="ship_country_input" class="form-control" type="text" name="country" required>
+                        <input id="ship_country_input" class="form-control" type="text" name="ship_country" required>
                     </div>
                     <div class="col-md-6">
                         <label for="ship_city_input">City</label>
-                        <input id="ship_city_input" class="form-control" type="text" name="city" required>
+                        <input id="ship_city_input" class="form-control" type="text" name="ship_city" required>
                     </div>
                     <div class="col-md-3">
                         <label for="ship_zipcode_input">Zipcode</label>
-                        <input id="ship_zipcode_input" class="form-control" type="text" name="zip" required>
+                        <input id="ship_zipcode_input" class="form-control" type="text" name="ship_zip" required>
                     </div>
-        <button type="submit">Go to Payment</button><br>
+        <button id="payment" >Go to Payment</button><br>
     </form>
+
+/*asp-controller="Order" asp-action="PaymentForm"*/
