Fix redirect after checkout

--- a/src/Codecool.CodecoolShop/Views/Shared/CheckoutForm.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/CheckoutForm.cshtml
@@ -61,11 +61,11 @@
                         <label for="ship_city_input">City</label>
                         <input id="ship_city_input" class="form-control" type="text" name="ship_city" required>
                     </div>
-                    <div class="col-md-3">
-                        <label for="ship_zipcode_input">Zipcode</label>
-                        <input id="ship_zipcode_input" class="form-control" type="text" name="ship_zip" required>
-                    </div>
-        <button id="payment" >Go to Payment</button><br>
+	<div class="col-md-3">
+		<label for="ship_zipcode_input">Zipcode</label>
+		<input id="ship_zipcode_input" class="form-control" type="text" name="ship_zip" required>
+	</div>
+	<a type="button" class="btn btn-primary" style="float: bottom; color: white" id="payment">Go to Payment</a><br>
     </form>
 
 /*asp-controller="Order" asp-action="PaymentForm"*/
