--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -27,11 +27,11 @@
                         </li>
                         <li class="nav-item dropdown">
 	                        <a class="nav-link text-dark products category dropdown-toggle" data-toggle="dropdown">Category</a>
-	                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
+	                        <div class="dropdown-menu products" aria-labelledby="dropdownMenuButton"></div>
                         </li>
                         <li class="nav-item dropdown">
 	                        <a class="nav-link text-dark products supplier dropdown-toggle" data-toggle="dropdown">Supplier</a>
-	                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
+	                        <div class="dropdown-menu products" aria-labelledby="dropdownMenuButton"></div>
                         </li>
                         <li class="nav-item ml-auto">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index"><span id="CartCount"></span><i class='fas fa-shopping-basket' style="font-size:24px"></i></a>
