Checkout form finalized

--- a/src/Codecool.CodecoolShop/Views/Shared/CheckoutForm.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/CheckoutForm.cshtml
@@ -55,15 +55,15 @@
                     
                     <div class="col-md-6">
                         <label for="ship_country_input">Country</label>
-                        <input id="ship_country_input" class="form-control" type="text" name="ship_country" required>
+                        <input id="ship_country_input" class="form-control" type="text" name="shipping_country" required>
                     </div>
                     <div class="col-md-6">
                         <label for="ship_city_input">City</label>
-                        <input id="ship_city_input" class="form-control" type="text" name="ship_city" required>
+                        <input id="ship_city_input" class="form-control" type="text" name="shipping_city" required>
                     </div>
 	<div class="col-md-3">
 		<label for="ship_zipcode_input">Zipcode</label>
-		<input id="ship_zipcode_input" class="form-control" type="text" name="ship_zip" required>
+		<input id="ship_zipcode_input" class="form-control" type="text" name="shipping_zip" required>
 	</div>
 	<a type="button" class="btn btn-primary" style="float: bottom; color: white" id="payment">Go to Payment</a><br>
     </form>
